--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Win Probability Week-by-Week Analysis</title>
+  <title>Buffalo Bills Win Probability Analysis</title>
   <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-  <h1>Win Probability Week-by-Week Analysis</h1>
+  <h1>Buffalo Bills Win Probability Analysis</h1>
+  <div id="excitement-metrics-container">
+    <h2>Excitement Metrics for Selected Week</h2>
+    <div id="excitement-week-metrics"></div>
+  </div>
   <div id="week-selector"></div>
   <div id="charts-container"></div>
   <script src="static/chart.js"></script>
